Some maths related modifications
- Oprator `End` now displays "end"
- New operator `END` displaying "End"
- New category "pSh"

--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -41,7 +41,8 @@
     \DeclareMathOperator*{\colim} {colim}
     \DeclareMathOperator {\dom}   {dom}
     \DeclareMathOperator {\Dom}   {Dom}
-    \DeclareMathOperator {\End}   {End}
+    \DeclareMathOperator {\End}   {end}
+    \DeclareMathOperator {\END}   {End}
     \DeclareMathOperator {\Ext}   {Ext}
     \DeclareMathOperator {\ev}    {ev}
     \DeclareMathOperator {\Frac}  {Frac}
@@ -122,6 +123,7 @@
     \newcategory{\Mon}   {}{M}{on}
     \newcategory{\Op}    {}{O}{p}
     \newcategory{\Pos}   {}{P}{os}
+    \newcategory{\pSh}   {p}{S}{h}
     \newcategory{\Ring}  {}{R}{ing}
     \newcategory{\Set}   {}{S}{et}
     \newcategory{\SET}   {}{S}{ET}
