Reworked greek letters style
- Removed the `b_maths_allow_bbgreek` internal variable
- Added the `bf` radical for greek letters (e.g. `bfGamma`)

--- a/kappak-letters.tex
+++ b/kappak-letters.tex
@@ -443,8 +443,6 @@
 %% bb
 %% --------------------
 
-\ifthenelse{\boolean{@b_maths_allow_bbgreek}}{
-
     \newcommand{\bbalpha}{\@bb{\alpha}}
     \newcommand{\bbbeta}{\@bb{\beta}}
     \newcommand{\bbgamma}{\@bb{\gamma}}
@@ -486,7 +484,50 @@
     \newcommand{\bbPsi}{\@bb{\Psi}}
     \newcommand{\bbOmega}{\@bb{\Omega}}
 
-}{} % \ifthenelse{\boolean{@b_maths_allow_bbgreek}}{
+%% --------------------
+%% bf
+%% --------------------
+
+    \newcommand{\bfalpha}{\boldsymbol{\alpha}}
+    \newcommand{\bfbeta}{\boldsymbol{\beta}}
+    \newcommand{\bfgamma}{\boldsymbol{\gamma}}
+    \newcommand{\bfdelta}{\boldsymbol{\delta}}
+    \newcommand{\bfvarepsilon}{\boldsymbol{\varepsilon}}
+    \newcommand{\bfepsilon}{\boldsymbol{\epsilon}}
+    \newcommand{\bfzeta}{\boldsymbol{\zeta}}
+    \newcommand{\bfeta}{\boldsymbol{\eta}}
+    \newcommand{\bftheta}{\boldsymbol{\theta}}
+    \newcommand{\bfvartheta}{\boldsymbol{\vartheta}}
+    \newcommand{\bfiota}{\boldsymbol{\iota}}
+    \newcommand{\bfkappa}{\boldsymbol{\kappa}}
+    \newcommand{\bflambda}{\boldsymbol{\lambda}}
+    \newcommand{\bfmu}{\boldsymbol{\mu}}
+    \newcommand{\bfnu}{\boldsymbol{\nu}}
+    \newcommand{\bfxi}{\boldsymbol{\xi}}
+    \newcommand{\bfpi}{\boldsymbol{\pi}}
+    \newcommand{\bfvarpi}{\boldsymbol{\varpi}}
+    \newcommand{\bfrho}{\boldsymbol{\rho}}
+    \newcommand{\bfvarrho}{\boldsymbol{\varrho}}
+    \newcommand{\bfsigma}{\boldsymbol{\sigma}}
+    \newcommand{\bfvarsigma}{\boldsymbol{\varsigma}}
+    \newcommand{\bftau}{\boldsymbol{\tau}}
+    \newcommand{\bfupsilon}{\boldsymbol{\upsilon}}
+    \newcommand{\bfphi}{\boldsymbol{\phi}}
+    \newcommand{\bfvarphi}{\boldsymbol{\varphi}}
+    \newcommand{\bfchi}{\boldsymbol{\chi}}
+    \newcommand{\bfpsi}{\boldsymbol{\psi}}
+    \newcommand{\bfomega}{\boldsymbol{\omega}}
+    \newcommand{\bfGamma}{\boldsymbol{\Gamma}}
+    \newcommand{\bfDelta}{\boldsymbol{\Delta}}
+    \newcommand{\bfTheta}{\boldsymbol{\Theta}}
+    \newcommand{\bfLambda}{\boldsymbol{\Lambda}}
+    \newcommand{\bfXi}{\boldsymbol{\Xi}}
+    \newcommand{\bfPi}{\boldsymbol{\Pi}}
+    \newcommand{\bfSigma}{\boldsymbol{\Sigma}}
+    \newcommand{\bfUpsilon}{\boldsymbol{\Upsilon}}
+    \newcommand{\bfPhi}{\boldsymbol{\Phi}}
+    \newcommand{\bfPsi}{\boldsymbol{\Psi}}
+    \newcommand{\bfOmega}{\boldsymbol{\Omega}}
 
 %% ----------------------------------------
 %% Accents
