--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -146,8 +146,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \\
-                {}#3 \& {}#4 \\
+                \displaystyle{#1} \& \displaystyle{#2} \\
+                \displaystyle{#3} \& \displaystyle{#4} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]  {$#6$} (m-2-1);
@@ -168,8 +168,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \\
-                {}#3 \& {}#4 \\
+                \displaystyle{#1} \& \displaystyle{#2} \\
+                \displaystyle{#3} \& \displaystyle{#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\ulcorner$}}} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
@@ -191,8 +191,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \\
-                {}#3 \& {}#4 \\
+                \displaystyle{#1} \& \displaystyle{#2} \\
+                \displaystyle{#3} \& \displaystyle{#4} \\
             };
             \path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\lrcorner$}}} (m-2-2);
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above] {$#5$} (m-1-2);
@@ -214,8 +214,8 @@
                     text height = 1.5 ex,
                     text depth = 0.25 ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \\
-                {}#3 \& \\
+                \displaystyle{#1} \& \displaystyle{#2} \\
+                \displaystyle{#3} \& \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [left]        {$#5$} (m-2-1);
@@ -235,8 +235,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \\
-                \& {}#3 \\
+                \displaystyle{#1} \& \displaystyle{#2} \\
+                \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]      {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left] {$#5$} (m-2-2);
@@ -256,8 +256,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& \\
-                {}#2 \& {}#3 \\
+                \displaystyle{#1} \& \\
+                \displaystyle{#2} \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$#4$} (m-2-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$#5$} (m-2-2);
@@ -277,8 +277,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                \& {}#1 \\
-                {}#2 \& {}#3 \\
+                \& \displaystyle{#1} \\
+                \displaystyle{#2} \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$#5$} (m-2-2);
@@ -298,8 +298,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                \& {}#1 \& \\
-                {}#2 \& \& {}#3 \\
+                \& \displaystyle{#1} \& \\
+                \displaystyle{#2} \& \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-2) edge [\@diagLA] node [above left]  {$#4$} (m-2-1);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [above right] {$#5$} (m-2-3);
@@ -318,9 +318,9 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                \& {}#1 \\
-                {}#2 \& \\
-                \& {}#3 \\
+                \& \displaystyle{#1} \\
+                \displaystyle{#2} \& \\
+                \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-2-1) edge [\@diagLA] node [above left] {$#4$} (m-1-2);
             \path [\@diagAB] (m-1-2) edge [\@diagLB] node [right]      {$#5$} (m-3-2);
@@ -340,9 +340,9 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& \\
-                \& {}#2 \\
-                {}#3 \& \\
+                \displaystyle{#1} \& \\
+                \& \displaystyle{#2} \\
+                \displaystyle{#3} \& \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [left]        {$#4$} (m-3-1);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [above right] {$#5$} (m-2-2);
@@ -362,8 +362,8 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& \& {}#2 \\
-                \& {}#3 \& \\
+                \displaystyle{#1} \& \& \displaystyle{#2} \\
+                \& \displaystyle{#3} \& \\
             };
             \path [\@diagAA] (m-1-1) edge [\@diagLA] node [above]       {$#4$} (m-1-3);
             \path [\@diagAB] (m-1-1) edge [\@diagLB] node [below left]  {$#5$} (m-2-2);
@@ -383,7 +383,7 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \& {}#3 \\
+                \displaystyle{#1} \& \displaystyle{#2} \& \displaystyle{#3} \\
             };
             \path [\@diagAA] (m-1-1)                    edge [\@diagLA] node [above] {$#4$} (m-1-2);
             \path [\@diagAB] ($(m-1-2.east) + (0,0.1)$) edge [\@diagLB] node [above] {$#5$} ($(m-1-3.west) + (0,0.1)$);
@@ -403,7 +403,7 @@
                     text height = 1.5ex,
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
-                {}#1 \& {}#2 \& {}#3 \\
+                \displaystyle{#1} \& \displaystyle{#2} \& \displaystyle{#3} \\
             };
             \path [\@diagAA] ($(m-1-1.east) + (0,0.1)$) edge [\@diagLA] node [above] {$#4$} ($(m-1-2.west) + (0,0.1)$);
             \path [\@diagAB] ($(m-1-1.east) - (0,0.1)$) edge [\@diagLB] node [below] {$#5$} ($(m-1-2.west) - (0,0.1)$);
