--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -248,4 +248,6 @@
     
     \renewcommand{\epsilon}{\varepsilon}
     
+    \newcommand{\yoneda}{\text{よ}}
+    
 }{} % \ifthenelse{\boolean{@b_maths_use_misc}}{
