--- a/kappak.sty
+++ b/kappak.sty
@@ -133,7 +133,7 @@
 \ifthenelse{\boolean{@b_use_misc}}{
 
     % Prevents annoying errors upon non printable chars
-    \DeclareUnicodeCharacter{00A0}{ }
+    % \DeclareUnicodeCharacter{00A0}{ }
     
     % I never remember that thing so here's a command
     \newcommand{\kbibliography}{
