Small hyperlink fix
TIL: `hidelinks` doesn't take any argument

--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -258,7 +258,7 @@
 
 \hypersetup{ % See https://en.wikibooks.org/wiki/LaTeX/Hyperlinks#Customization
     colorlinks=false,
-    hidelinks=true,
+    hidelinks,
     linktoc=all,
     unicode=true
 }
